--- a/package.json
+++ b/package.json
@@ -7,7 +7,17 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
-    "generate-data": "node utils/generate-data.js"
+    "generate-data": "node utils/generate-data.js",
+    "deploy": "gh-pages-deploy",
+    "clean-source": "rimraf README.md src .babelrc .bootstraprc webpack.config.js utils src package.json"
+  },
+  "gh-pages-deploy": {
+    "prep": [
+      "build"
+    ],
+    "post": [
+      "clean-source"
+    ]
   },
   "dependencies": {
     "jquery": "^3.2.1",
@@ -34,6 +44,7 @@
     "dreamjs": "^0.1.5",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.9.0",
+    "gh-pages-deploy": "^0.4.2",
     "jsonfile": "^2.2.3",
     "node-sass": "^4.5.2",
     "resolve-url-loader": "^2.0.2",
